Got some rudimentary server tests working